Fixed access to my work section on mobiles

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,19 +16,6 @@ html, body {
   height: 100%;
 }
 
-//Workaround
-body {
-  min-height: 100vh;
-  min-height: -moz-available;
-  min-height: -webkit-fill-available;
-  min-height: fill-available;
-}
-html {
-  height: fill-available;
-  height: -webkit-fill-available;
-}
-// /Workaround
-
 @font-face {
   font-family: "Sequel";
   src: url("/fonts/Sequel_Demo.ttf");
